[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/McLaren-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/backgrounds/Background3.png" type="Texture" id=2]
[ext_resource path="res://LoginSreen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 3
outline_color = Color( 0.0745098, 0.0117647, 0.0117647, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.866667, 0.847059, 0.847059, 1 )
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45
corner_detail = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.866667, 0.847059, 0.847059, 1 )
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45
corner_detail = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.768627, 0.768627, 0.768627, 1 )
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45
corner_detail = 10

[sub_resource type="DynamicFont" id=5]
size = 32
use_filter = true
extra_spacing_bottom = 3
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.866667, 0.847059, 0.847059, 1 )
border_color = Color( 0.8, 0.8, 0.8, 0.8 )
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45
corner_detail = 10

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.866667, 0.847059, 0.847059, 1 )
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45
corner_detail = 10

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 0.360784, 0, 1 )
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45
corner_detail = 10

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 0.360784, 0, 1 )
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45
corner_detail = 10

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 0.360784, 0, 1 )
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45
corner_detail = 10
shadow_color = Color( 0, 0, 0, 0.568627 )
shadow_size = 2
shadow_offset = Vector2( 1, 2 )

[node name="LoginSreen" type="Node2D"]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 414.0
margin_bottom = 896.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control"]
texture = ExtResource( 2 )
centered = false

[node name="Label" type="Label" parent="Control"]
margin_left = 82.0
margin_top = 82.0
margin_right = 332.0
margin_bottom = 175.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.976471, 0.505882, 0.227451, 1 )
text = "Karibu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level1Btn" type="Button" parent="Control"]
margin_left = 23.0
margin_top = 263.0
margin_right = 388.0
margin_bottom = 337.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
action_mode = 0
text = "Hatua ya 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level2Btn" type="Button" parent="Control"]
margin_left = 23.0
margin_top = 359.0
margin_right = 388.0
margin_bottom = 433.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
action_mode = 0
text = "Hatua ya 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level3Btn" type="Button" parent="Control"]
margin_left = 23.0
margin_top = 450.0
margin_right = 388.0
margin_bottom = 524.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
action_mode = 0
text = "Hatua ya 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level4Btn" type="Button" parent="Control"]
margin_left = 23.0
margin_top = 544.0
margin_right = 388.0
margin_bottom = 618.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
action_mode = 0
text = "Hatua ya 4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level5Btn" type="Button" parent="Control"]
margin_left = 23.0
margin_top = 638.0
margin_right = 388.0
margin_bottom = 712.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
action_mode = 0
text = "Ramani"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoreInfoBtn" type="Button" parent="Control"]
margin_left = 23.0
margin_top = 761.0
margin_right = 388.0
margin_bottom = 835.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
action_mode = 0
text = "Kwa msaada zaidi"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Control/Level1Btn" to="." method="_on_Level1Btn_pressed"]
[connection signal="pressed" from="Control/Level2Btn" to="." method="_on_Level2Btn_pressed"]
[connection signal="pressed" from="Control/Level3Btn" to="." method="_on_Level3Btn_pressed"]
[connection signal="pressed" from="Control/Level4Btn" to="." method="_on_Level4Btn_pressed"]
[connection signal="pressed" from="Control/Level5Btn" to="." method="_on_Level5Btn_pressed"]
[connection signal="pressed" from="Control/MoreInfoBtn" to="." method="_on_MoreInfoBtn_pressed"]
